prevent photo cropping on large screens

--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,8 @@ footer {
     text-align: center;
 }
 
+
+
 .partFooter:first-child {
     /* Lo que hacemos aquí es definir la altura del contenedor de la imagen
     en 0, para que no ocupe espacio vertical, pero, si va a continuar ocupando
@@ -312,11 +314,18 @@ footer {
     de la página, y al establecer overflow en visible, dejamos que la imagen
     se sigua mostrando. */
     overflow-y: visible;
+    padding: 0 30px;
 }
 
+/*
+@media screen and (max-width: ) {
+    
+}*/
+
 .partFooter img {
-    width: 60%;
+    width: 100%;
     clip-path: circle(35.0% at 50% 30%);
+    max-width: 185px;
 }
 
 .partFooter h4 {
